--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -20,7 +20,9 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
+    "react-pdf": "^9.2.1",
     "react-router-dom": "^7.1.5",
+    "react-speech-recognition": "^3.10.0",
     "react-toastify": "^11.0.3",
     "styled-components": "^6.1.15"
   },
