--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -17,10 +17,11 @@
     "@mui/styled-engine-sc": "^6.4.3",
     "axios": "^1.7.9",
     "lucide-react": "^0.475.0",
+    "pdfjs-dist": "^2.16.105",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
-    "react-pdf": "^9.2.1",
+    "react-pdf": "^5.7.2",
     "react-router-dom": "^7.1.5",
     "react-speech-recognition": "^3.10.0",
     "react-toastify": "^11.0.3",
