--- a/Backend/package.json
+++ b/Backend/package.json
@@ -4,7 +4,9 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "node": "nodemon index.js"
+    "node": "nodemon index.js",
+    "vercel-start": "vercel dev"
+
   },
   "keywords": [],
   "author": "",
